[package]
name = "planet-mars"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Koch <thomas@koch.ro>"]
description = "Feed aggregation planet like Planet Venus, produces static HTML and ATOM feed from fetched feeds."
homepage = "https://github.com/thkoch2001/planet-mars"
license = "AGPL-3.0-or-later"
keywords = ["atom", "rss", "planet", "feed", "blogging"]
categories = ["web-programming"]

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
env_logger = "*"
feed-rs = "*"
log = "*"
ron = "*" # todo for development, to check atom-rs internal representation of feeds
serde = { version = "*", features = ["derive"] }
slug = "*"
tera = "*"
toml = "*"
ureq = { version = "3.0.0-rc5", features = ["brotli", "charset", "gzip", "native-tls"]}
url = "*"
quick-xml = { version = "*", features = ["serialize"] }
